Update jquery, et. al and fix mobile visibility issues

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -104,7 +104,7 @@
 /* Main content */
 
 .fixed {
-  /*  position: fixed; */
+  position: fixed;
   @media (min-width: 940px) {
     position: static;
   }
